<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">SmartCart</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="activity_name_signin">SmartCart - Signin</string>
    <string name="activity_name_signup">SmartCart - Signup</string>
    <string name="activity_name_main">SmartCart - Main</string>
    <string name="activity_name_update">SmartCart - Update</string>

    <string name="signin_insert_email">E-mail</string>
    <string name="signin_insert_password">Senha</string>
    <string name="signin_ok_button_label">Entrar</string>
    <string name="signin_clickable_signup_text">Criar uma conta</string>
    <string name="signin_login_fail">e-mail ou senha incorretos</string>

    <string name="signup_insert_email">Insira seu E-mail</string>
    <string name="signup_insert_password">Sua senha</string>
    <string name="signup_insert_password_conf">Confirme sua senha</string>
    <string name="signup_insert_first_name">Seu nome</string>
    <string name="signup_insert_last_name">Seu sobrenome</string>
    <string name="signup_create_account_button">Criar conta</string>

    <string name="main_welcome_user_text">Bem vindo %1s</string>
    <string name="main_update_client_button">Atualizar dados de cliente</string>
    <string name="main_logout_button_label">Logout</string>
    
    <string name="update_disclaimer_text">Os campos em branco não serão atualizados</string>
    <string name="update_insert_email">Novo E-mail</string>
    <string name="update_insert_password">Nova senha</string>
    <string name="update_insert_first_name">Novo nome</string>
    <string name="update_insert_last_name">Novo sobrenome</string>
    <string name="update_create_account_button">Atualizar minha conta</string>
    
    <string name="error_confirm_email_field">Campos senha e confirmação de senha diferem</string>
    <string name="error_empty_fields">Todos os campos devem ser preenchidos</string>
    <string name="error_email_not_registered">Conta de E-mail não cadastrada</string>
    <string name="error_email_already_registered">Conta de E-mail já cadastrada.</string>
    <string name="error_register_account_fail">Falha na criação de nova conta</string>
    <string name="error_wrong_email_or_password">E-mail ou senha incorretos</string>
    

</resources>